src/test/deca/context/valid/field_float.deca
// Description:
//    Test d'une déclaration de champs flottants
//
// Résultats:
//    OK
//
// Historique:
//    créé le 19/01/2017


class A {
  float x;
  float y = 1.0;
}
